# AIRCRAFT-MALT

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  README_FINAL.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh
contracts/: README.md
contracts/receiver-registry/: Cargo.toml  Makefile  README.md
contracts/receiver-registry/.cargo/: config.toml
contracts/receiver-registry/src/: entry.rs  error.rs  lib.rs  main.rs  record.rs
docs/: CKB_INTEGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md
examples/: bridge.py  simple_demo.py  simulation_demo.py
src/: main.py  mlat_runtime.py  production_main.py  runtime_config.py
src/api/: rest_api.py
src/correlation/: correlator.py
src/database/: mlat_db.py
src/mlat/: enhanced_solver.py  robust_solver.py  solver.py
src/network/: __init__.py  ckb_client.py  ckb_discovery.py  feed_transports.py  neuron_client.py
src/visualization/: dashboard.html
tests/: test_api.py  test_ckb_registry.py  test_contract_layout.py  test_correlator.py  test_database.py  test_solver.py
