[package]
name = "receiver-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = { version = "0.16", default-features = false }
heapless = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[features]
default = []

[profile.release]
overflow-checks = true
panic = "abort"
opt-level = "s"
codegen-units = 1
strip = true

[dev-dependencies]
serde_json = "1"
