[package]
name = "receiver-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.16"
heapless = { version = "0.7.17", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[features]
default = []
native-simulator = []

[profile.release]
overflow-checks = true
panic = "abort"
opt-level = "s"
codegen-units = 1
strip = true

[dev-dependencies]
serde_json = "1"
